Add .gitignore to `packages` as symlink

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ### Dart ###
 # Don窶冲 commit the following directories created by pub.
 build/
-packages/
+packages
 
 # Or the files created by dart2js.
 *.dart.js
